--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -641,7 +641,14 @@ input.formFieldVerySmallSized,textarea.formFieldVerySmallSized,select.formFieldV
 
 .formFieldSmallNoBorder{ /* for the form elements themselves and with a constant width (on elements) */
  border:0;
- width:2em;
+ width:3em;
+ font-size:1em;
+}
+
+.formFieldSmallNoBorderlargeSize{ /* for the form elements themselves and with a constant width (on elements) */
+ border:0;
+ width:8em;
+ font-size:1em;
 }
 
 /* used by mandar in collection prptocol. Size set to 5em */
