--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -590,3 +590,17 @@ color: #000000;
     border:1px solid #ebecec; border-collapse:collapse;
 	padding-left:10px;
 }
+
+.pre 
+{
+	white-space: pre; /* CSS2 */
+	white-space: -moz-pre-wrap; /* Mozilla */
+	white-space: -hp-pre-wrap; /* HP printers */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: pre-wrap; /* CSS 2.1 */
+	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+	word-wrap: break-word; /* IE */
+	 _white-space: pre;
+	font-family: verdana; font-size : 11;
+}
